<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/view_container_transaction_authorization"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loaderView"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:indeterminate="true" />

        <!--
        <include
            android:id="@+id/offline"
            layout="@/view_offline"
            android:visibility="gone"/>
        -->

        <LinearLayout
            android:id="@+id/transaction_content"
            style="@style/ContainerPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_titles"
                android:text="@string/transaction_autorization_title"
                android:layout_marginBottom="@dimen/intermediate_margin"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commerceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/commerce_code"
                android:layout_marginTop="@dimen/fragment_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/terminalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/terminal_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:layout_marginBottom="@dimen/intermediate_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/autorizationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autorization_button_text"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</layout>